# Raw-Dump-Tool-V2

./: LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: main.yml
src/: App.css  App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/Componetes/: Contact.tsx  Home.tsx  Info.tsx  Security.tsx
src/components/: Contact.tsx  Home.tsx
src/components/ui/: evervault-card.tsx  following-pointer.tsx
